maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: ';' expected but ',' found.
  x,y = findBaggle(xMax,yMax)
   ^ShortestPathMaze:22: error: ';' expected but ',' found.
  return i,j
          ^